# Doom3BFG
add_executable(Doom3BFG WIN32 $<TARGET_OBJECTS:Game-d3xp>)
target_include_directories(Doom3BFG PUBLIC ${SDL2_INCLUDE_DIRS})
target_link_libraries(Doom3BFG Game-d3xp idLib doomclassic timidity)
target_link_libraries(Doom3BFG ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})
if(WIN32)
    target_link_libraries(Doom3BFG Dbghelp.lib winmm.lib)
endif()

target_sources(Doom3BFG PRIVATE
    "aas/AASFile.cpp"
    "aas/AASFile.h"
    "aas/AASFile_local.h"
    "aas/AASFile_optimize.cpp"
    "aas/AASFile_sample.cpp"
    "aas/AASFileManager.cpp"
    "aas/AASFileManager.h"
    "cm/CollisionModel.h"
    "cm/CollisionModel_contacts.cpp"
    "cm/CollisionModel_contents.cpp"
    "cm/CollisionModel_debug.cpp"
    "cm/CollisionModel_files.cpp"
    "cm/CollisionModel_load.cpp"
    "cm/CollisionModel_local.h"
    "cm/CollisionModel_rotate.cpp"
    "cm/CollisionModel_trace.cpp"
    "cm/CollisionModel_translate.cpp"
    "framework/decls/DeclAF.cpp"
    "framework/decls/DeclAF.h"
    "framework/decls/DeclEntityDef.cpp"
    "framework/decls/DeclEntityDef.h"
    "framework/decls/DeclFX.cpp"
    "framework/decls/DeclFX.h"
    "framework/decls/DeclManager.cpp"
    "framework/decls/DeclManager.h"
    "framework/decls/DeclParticle.cpp"
    "framework/decls/DeclParticle.h"
    "framework/decls/DeclPDA.cpp"
    "framework/decls/DeclPDA.h"
    "framework/decls/DeclSkin.cpp"
    "framework/decls/DeclSkin.h"
    "framework/decls/DeclTable.cpp"
    "framework/decls/DeclTable.h"
    "framework/BuildVersion.h"
    "framework/CmdSystem.cpp"
    "framework/CmdSystem.h"
    "framework/Common.cpp"
    "framework/Common.h"
    "framework/Common_demos.cpp"
    "framework/Common_dialog.cpp"
    "framework/Common_dialog.h"
    "framework/common_frame.cpp"
    "framework/Common_load.cpp"
    "framework/Common_local.h"
    "framework/Common_localize.cpp"
    "framework/Common_menu.cpp"
    "framework/Common_network.cpp"
    "framework/Common_printf.cpp"
    "framework/Compressor.cpp"
    "framework/Compressor.h"
    "framework/Console.cpp"
    "framework/Console.h"
    "framework/ConsoleHistory.cpp"
    "framework/ConsoleHistory.h"
    "framework/CVarSystem.cpp"
    "framework/CVarSystem.h"
    "framework/DebugGraph.cpp"
    "framework/DebugGraph.h"
    "framework/DemoChecksum.h"
    "framework/DemoFile.cpp"
    "framework/DemoFile.h"
    "framework/EditField.cpp"
    "framework/EditField.h"
    "framework/EventLoop.cpp"
    "framework/EventLoop.h"
    "framework/File.cpp"
    "framework/File.h"
    "framework/File_Manifest.cpp"
    "framework/File_Manifest.h"
    "framework/File_Resource.cpp"
    "framework/File_Resource.h"
    "framework/File_SaveGame.cpp"
    "framework/File_SaveGame.h"
    "framework/FileSystem.cpp"
    "framework/FileSystem.h"
    "framework/KeyInput.cpp"
    "framework/KeyInput.h"
    "framework/Licensee.h"
    "framework/PlayerProfile.cpp"
    "framework/PlayerProfile.h"
    "framework/Serializer.h"
    "framework/TokenParser.cpp"
    "framework/TokenParser.h"
    "framework/Unzip.cpp"
    "framework/Unzip.h"
    "framework/UsercmdGen.cpp"
    "framework/UsercmdGen.h"
    "framework/Zip.cpp"
    "framework/Zip.h"
    "renderer/Color/ColorSpace.cpp"
    "renderer/Color/ColorSpace.h"
    "renderer/DXT/DXTCodec.h"
    "renderer/DXT/DXTCodec_local.h"
    "renderer/DXT/DXTDecoder.cpp"
    "renderer/DXT/DXTEncoder.cpp"
    "renderer/DXT/DXTEncoder_SSE2.cpp"
    "renderer/OpenGL/gl_backend.cpp"
    "renderer/OpenGL/gl_GraphicsAPIWrapper.cpp"
    "renderer/OpenGL/gl_Image.cpp"
    "renderer/OpenGL/glext.h"
    "renderer/OpenGL/qgl.h"
    "renderer/OpenGL/qgl_linked.h"
    "renderer/AutoRender.cpp"
    "renderer/AutoRender.h"
    "renderer/AutoRenderBink.cpp"
    "renderer/AutoRenderBink.h"
    "renderer/BinaryImage.cpp"
    "renderer/BinaryImage.h"
    "renderer/BinaryImageData.h"
    "renderer/BufferObject.cpp"
    "renderer/BufferObject.h"
    "renderer/Cinematic.cpp"
    "renderer/Cinematic.h"
    "renderer/Font.cpp"
    "renderer/Font.h"
    "renderer/GLMatrix.cpp"
    "renderer/GLMatrix.h"
    "renderer/GLState.h"
    "renderer/GraphicsAPIWrapper.h"
    "renderer/GuiModel.cpp"
    "renderer/GuiModel.h"
    "renderer/Image.h"
    "renderer/Image_files.cpp"
    "renderer/Image_intrinsic.cpp"
    "renderer/Image_load.cpp"
    "renderer/Image_process.cpp"
    "renderer/Image_program.cpp"
    "renderer/ImageManager.cpp"
    "renderer/ImageOpts.h"
    "renderer/Interaction.cpp"
    "renderer/Interaction.h"
    "renderer/Material.cpp"
    "renderer/Material.h"
    "renderer/Model.cpp"
    "renderer/Model.h"
    "renderer/Model_ase.cpp"
    "renderer/Model_ase.h"
    "renderer/Model_beam.cpp"
    "renderer/Model_liquid.cpp"
    "renderer/Model_local.h"
    "renderer/Model_lwo.cpp"
    "renderer/Model_lwo.h"
    "renderer/Model_ma.cpp"
    "renderer/Model_ma.h"
    "renderer/Model_md3.cpp"
    "renderer/Model_md3.h"
    "renderer/Model_md5.cpp"
    "renderer/Model_prt.cpp"
    "renderer/Model_sprite.cpp"
    "renderer/ModelDecal.cpp"
    "renderer/ModelDecal.h"
    "renderer/ModelManager.cpp"
    "renderer/ModelManager.h"
    "renderer/ModelOverlay.cpp"
    "renderer/ModelOverlay.h"
    "renderer/RenderContext.h"
    "renderer/RenderEntity.cpp"
    "renderer/RenderLog.cpp"
    "renderer/RenderLog.h"
    "renderer/RenderProgs.cpp"
    "renderer/RenderProgs.h"
    "renderer/RenderProgs_GLSL.cpp"
    "renderer/RenderSystem.cpp"
    "renderer/RenderSystem.h"
    "renderer/RenderSystem_init.cpp"
    "renderer/RenderTexture.h"
    "renderer/RenderWorld.cpp"
    "renderer/RenderWorld.h"
    "renderer/RenderWorld_defs.cpp"
    "renderer/RenderWorld_demo.cpp"
    "renderer/RenderWorld_load.cpp"
    "renderer/RenderWorld_local.h"
    "renderer/RenderWorld_portals.cpp"
    "renderer/ResolutionScale.cpp"
    "renderer/ResolutionScale.h"
    "renderer/ScreenRect.cpp"
    "renderer/ScreenRect.h"
    "renderer/simplex.h"
    "renderer/stb_image.h"
    "renderer/tr_backend_draw.cpp"
    "renderer/tr_backend_rendertools.cpp"
    "renderer/tr_frontend_addlights.cpp"
    "renderer/tr_frontend_addmodels.cpp"
    "renderer/tr_frontend_deform.cpp"
    "renderer/tr_frontend_guisurf.cpp"
    "renderer/tr_frontend_main.cpp"
    "renderer/tr_frontend_subview.cpp"
    "renderer/tr_local.h"
    "renderer/tr_trace.cpp"
    "renderer/tr_trisurf.cpp"
    "renderer/VertexCache.cpp"
    "renderer/VertexCache.h"
    "sound/OpenAL/AL_SoundHardware.cpp"
    "sound/OpenAL/AL_SoundHardware.h"
    "sound/OpenAL/AL_SoundSample.cpp"
    "sound/OpenAL/AL_SoundSample.h"
    "sound/OpenAL/AL_SoundVoice.cpp"
    "sound/OpenAL/AL_SoundVoice.h"
    "sound/snd_emitter.cpp"
    "sound/snd_local.h"
    "sound/snd_shader.cpp"
    "sound/snd_system.cpp"
    "sound/snd_world.cpp"
    "sound/sound.h"
    "sound/SoundVoice.cpp"
    "sound/SoundVoice.h"
    "sound/WaveFile.cpp"
    "sound/WaveFile.h"
    "swf/SWF.h"
    "swf/SWF_Bitstream.cpp"
    "swf/SWF_Bitstream.h"
    "swf/SWF_Dictionary.cpp"
    "swf/SWF_Enums.h"
    "swf/SWF_Events.cpp"
    "swf/SWF_Image.cpp"
    "swf/SWF_Load.cpp"
    "swf/SWF_Main.cpp"
    "swf/SWF_Names.cpp"
    "swf/SWF_ParmList.cpp"
    "swf/SWF_ParmList.h"
    "swf/SWF_PlaceObject.cpp"
    "swf/SWF_Render.cpp"
    "swf/SWF_ScriptFunction.cpp"
    "swf/SWF_ScriptFunction.h"
    "swf/SWF_ScriptObject.cpp"
    "swf/SWF_ScriptObject.h"
    "swf/SWF_ScriptVar.cpp"
    "swf/SWF_ScriptVar.h"
    "swf/SWF_ShapeParser.cpp"
    "swf/SWF_ShapeParser.h"
    "swf/SWF_Shapes.cpp"
    "swf/SWF_Sounds.cpp"
    "swf/SWF_SpriteInstance.cpp"
    "swf/SWF_SpriteInstance.h"
    "swf/SWF_Sprites.cpp"
    "swf/SWF_Sprites.h"
    "swf/SWF_Text.cpp"
    "swf/SWF_TextInstance.cpp"
    "swf/SWF_TextInstance.h"
    "swf/SWF_Types.h"
    "swf/SWF_Zlib.cpp"
    "ui/BindWindow.cpp"
    "ui/BindWindow.h"
    "ui/ChoiceWindow.cpp"
    "ui/ChoiceWindow.h"
    "ui/DeviceContext.cpp"
    "ui/DeviceContext.h"
    "ui/EditWindow.cpp"
    "ui/EditWindow.h"
    "ui/FieldWindow.cpp"
    "ui/FieldWindow.h"
    "ui/GameBearShootWindow.cpp"
    "ui/GameBearShootWindow.h"
    "ui/GameBustOutWindow.cpp"
    "ui/GameBustOutWindow.h"
    "ui/GameSSDWindow.cpp"
    "ui/GameSSDWindow.h"
    "ui/GuiScript.cpp"
    "ui/GuiScript.h"
    "ui/ListGUI.cpp"
    "ui/ListGUI.h"
    "ui/ListGUILocal.h"
    "ui/ListWindow.cpp"
    "ui/ListWindow.h"
    "ui/Rectangle.h"
    "ui/RegExp.cpp"
    "ui/RegExp.h"
    "ui/RenderWindow.cpp"
    "ui/RenderWindow.h"
    "ui/SimpleWindow.cpp"
    "ui/SimpleWindow.h"
    "ui/SliderWindow.cpp"
    "ui/SliderWindow.h"
    "ui/UserInterface.cpp"
    "ui/UserInterface.h"
    "ui/UserInterfaceLocal.h"
    "ui/Window.cpp"
    "ui/Window.h"
    "ui/Winvar.cpp"
    "ui/Winvar.h"
    "sys/sdl/sdl_glimp.cpp"
    "sys/sdl/sdl_input.cpp"
    "sys/sdl/sdl_local.h"
    "sys/sdl/sdl_localuser.cpp"
    "sys/sdl/sdl_localuser.h"
    "sys/sdl/sdl_main.cpp"
    "sys/sdl/sdl_savegame.cpp"
    "sys/sdl/sdl_shared.cpp"
    "sys/sdl/sdl_signin.cpp"
    "sys/sdl/sdl_signin.h"
    "sys/stub/stub_achievements.cpp"
    "sys/stub/stub_achievements.h"
    "sys/stub/stub_session_local.cpp"
    "sys/LightweightCompression.cpp"
    "sys/LightweightCompression.h"
    "sys/PacketProcessor.cpp"
    "sys/PacketProcessor.h"
    "sys/Snapshot.cpp"
    "sys/Snapshot.h"
    "sys/Snapshot_Jobs.cpp"
    "sys/Snapshot_Jobs.h"
    "sys/SnapshotProcessor.cpp"
    "sys/SnapshotProcessor.h"
    "sys/sys_achievements.cpp"
    "sys/sys_achievements.h"
    "sys/sys_cpu.cpp"
    "sys/sys_dedicated_server_search.cpp"
    "sys/sys_dedicated_server_search.h"
    "sys/sys_lobby.cpp"
    "sys/sys_lobby.h"
    "sys/sys_lobby_backend.h"
    "sys/sys_lobby_backend_direct.cpp"
    "sys/sys_lobby_backend_direct.h"
    "sys/sys_lobby_migrate.cpp"
    "sys/sys_lobby_snapshot.cpp"
    "sys/sys_lobby_users.cpp"
    "sys/sys_local.cpp"
    "sys/sys_local.h"
    "sys/sys_localuser.cpp"
    "sys/sys_localuser.h"
    "sys/sys_net.cpp"
    "sys/sys_profile.cpp"
    "sys/sys_profile.h"
    "sys/sys_public.h"
    "sys/sys_savegame.cpp"
    "sys/sys_savegame.h"
    "sys/sys_session.h"
    "sys/sys_session_callbacks.cpp"
    "sys/sys_session_local.cpp"
    "sys/sys_session_local.h"
    "sys/sys_session_savegames.cpp"
    "sys/sys_session_savegames.h"
    "sys/sys_signin.cpp"
    "sys/sys_signin.h"
    "sys/sys_stats.h"
    "sys/sys_stats_misc.h"
    "sys/sys_voicechat.cpp"
    "sys/sys_voicechat.h"
)

if(WIN32)
    target_sources(Doom3BFG PRIVATE
        "sys/win32/rc/res/doom.ico"
        "sys/win32/rc/doom.rc"
        "sys/win32/rc/doom_resource.h"
        "sys/win32/win_main.cpp"
        "sys/win32/win_syscon.cpp"
    )
else()
    target_sources(Doom3BFG PRIVATE
        "sys/posix/posix_main.cpp"
        "sys/posix/posix_syscon.cpp"
    )
endif()

target_pch(Doom3BFG "../idlib/precompiled.h" "framework/precompiled.cpp")

target_sources(Doom3BFG PRIVATE
    "framework/miniz.c"
    "framework/miniz.h"
    "mojoal/AL/al.h"
    "mojoal/AL/alc.h"
    "mojoal/mojoal.c"
    "renderer/jobs/dynamicshadowvolume/DynamicShadowVolume.cpp"
    "renderer/jobs/dynamicshadowvolume/DynamicShadowVolume.h"
    "renderer/jobs/dynamicshadowvolume/DynamicShadowVolume_local.h"
    "renderer/jobs/prelightshadowvolume/PreLightShadowVolume.cpp"
    "renderer/jobs/prelightshadowvolume/PreLightShadowVolume.h"
    "renderer/jobs/prelightshadowvolume/PreLightShadowVolume_local.h"
    "renderer/jobs/staticshadowvolume/StaticShadowVolume.cpp"
    "renderer/jobs/staticshadowvolume/StaticShadowVolume.h"
    "renderer/jobs/staticshadowvolume/StaticShadowVolume_local.h"
    "renderer/jobs/ShadowShared.cpp"
    "renderer/jobs/ShadowShared.h"
)

get_target_property(DOOM3BFG_SOURCES Doom3BFG SOURCES)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${DOOM3BFG_SOURCES})

if(MSVC)
    set_source_files_properties("framework/miniz.c" PROPERTIES COMPILE_FLAGS /W0)
    set_source_files_properties("mojoal/mojoal.c" PROPERTIES COMPILE_FLAGS /W0)
endif()

# copy shaders to target directory
add_custom_command(
    TARGET Doom3BFG
    POST_BUILD
    COMMAND ${CMAKE_COMMAND}
    ARGS -E copy_directory ${CMAKE_SOURCE_DIR}/base/renderprogs $<TARGET_FILE_DIR:Doom3BFG>/base/renderprogs
)

if(SDL2_DLL)
    # copy SDL2 shared library to target dir
    add_custom_command(
        TARGET Doom3BFG
        POST_BUILD
        COMMAND ${CMAKE_COMMAND}
        ARGS -E copy ${SDL2_DLL} $<TARGET_FILE_DIR:Doom3BFG>
    )
endif()

# idLib
add_subdirectory("idlib")

# Game-d3xp
add_subdirectory("d3xp")
